--- a/Objects/MrRTOS.build_log.htm
+++ b/Objects/MrRTOS.build_log.htm
@@ -9,7 +9,7 @@ License Information: Eric Praetzel, ECE Dept, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.24.1
-Toolchain Path:  C:\software\Keil_v5\ARM\ARMCC\Bin
+Toolchain Path:  C:\Software\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 5 (build 528)
 Assembler:       Armasm.exe V5.06 update 5 (build 528)
 Linker/Locator:  ArmLink.exe V5.06 update 5 (build 528)
@@ -21,22 +21,25 @@ Target DLL:      UL2CM3.DLL V1.160.3.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-N:\MTE241\rtos\MrRTOS.uvprojx
-Project File Date:  07/19/2019
+N:\2B\MrRTOS\MrRTOS.uvprojx
+Project File Date:  07/24/2019
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\software\Keil_v5\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Software\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 compiling Retarget.c...
 compiling context.c...
 compiling RTOS.c...
 compiling uart.c...
-compiling main.c...
 assembling startup_LPC17xx.s...
+compiling main.c...
+main.c(24): warning:  #177-D: variable "counter_addr"  was declared but never referenced
+  	uint32_t *counter_addr = &counter; 
+main.c: 1 warning, 0 errors
 compiling system_LPC17xx.c...
 linking...
-Program Size: Code=2412 RO-data=236 RW-data=76 ZI-data=8516  
-".\Objects\MrRTOS.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=2348 RO-data=236 RW-data=76 ZI-data=8516  
+".\Objects\MrRTOS.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -55,16 +58,16 @@ Package Vendor: Keil
 <h2>Collection of Component include folders:</h2>
   .\RTE\Device\LPC1768
   .\RTE\_Target_1
-  C:\software\Keil_v5\ARM\PACK\ARM\CMSIS\5.3.0\CMSIS\Include
-  C:\software\Keil_v5\ARM\PACK\Keil\LPC1700_DFP\2.4.0\Device\Include
+  C:\Software\Keil_v5\ARM\PACK\ARM\CMSIS\5.3.0\CMSIS\Include
+  C:\Software\Keil_v5\ARM\PACK\Keil\LPC1700_DFP\2.4.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: Keil::Device:Startup:1.0.0
-      Source file:   Device\Source\ARM\startup_LPC17xx.s
       Include file:  Device\Include\LPC17xx.h
-      Source file:   Device\Source\system_LPC17xx.c
+      Source file:   Device\Source\ARM\startup_LPC17xx.s
       Include file:  RTE_Driver\Config\RTE_Device.h
+      Source file:   Device\Source\system_LPC17xx.c
 
    * Component: ARM::CMSIS:CORE:5.1.1
 Build Time Elapsed:  00:00:01
