--- a/Objects/MrRTOS.build_log.htm
+++ b/Objects/MrRTOS.build_log.htm
@@ -21,8 +21,8 @@ Target DLL:      UL2CM3.DLL V1.160.3.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-N:\2B\MrRTOS\MrRTOS.uvprojx
-Project File Date:  07/24/2019
+N:\MTE241\rtos\MrRTOS.uvprojx
+Project File Date:  07/19/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Software\Keil_v5\ARM\ARMCC\Bin'
@@ -30,12 +30,12 @@ Rebuild target 'Target 1'
 compiling Retarget.c...
 compiling context.c...
 compiling RTOS.c...
-assembling startup_LPC17xx.s...
 compiling uart.c...
+assembling startup_LPC17xx.s...
 compiling main.c...
 compiling system_LPC17xx.c...
 linking...
-Program Size: Code=2484 RO-data=236 RW-data=76 ZI-data=8540  
+Program Size: Code=2548 RO-data=236 RW-data=76 ZI-data=8540  
 ".\Objects\MrRTOS.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -61,13 +61,13 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: Keil::Device:Startup:1.0.0
-      Include file:  Device\Include\LPC17xx.h
       Source file:   Device\Source\ARM\startup_LPC17xx.s
-      Include file:  RTE_Driver\Config\RTE_Device.h
+      Include file:  Device\Include\LPC17xx.h
       Source file:   Device\Source\system_LPC17xx.c
+      Include file:  RTE_Driver\Config\RTE_Device.h
 
    * Component: ARM::CMSIS:CORE:5.1.1
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
